--- a/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
@@ -37,15 +37,18 @@
                 </form>
             </div>
 
-            <div class="categories-right-section">
 
-                @if (Model.Books.Count() == 0)
-                {
+            @if (Model.Books.Count() == 0)
+            {
+
+                <div class="categories-right-section" style="flex-direction: column;">
                     <h3>No books found</h3>
-                    <img src="/images/bookNotFound.png" alt="No books found image" class="not-found-book"></img>
-                }
-                else
-                {
+                    <img src="/images/bookNotFound.png" alt="No books found image" class="not-found-book" />
+                </div>
+            }
+            else
+            {
+                <div class="categories-right-section">
                     @foreach (var book in Model.Books)
                     {
                         <div class="book-info-summary">
@@ -57,28 +60,47 @@
                                     <div class="book-price">$@book.Price</div>
                                 </div>
                                 <div>
-                                @if (User.IsInRole("Administrator"))
-                                {
-                                    <a hidden="hidden" id="edit-@book.Id" type="button" class="edit-book-button-link" asp-controller="Book" asp-action="EditBook" asp-route-bookId="@book.Id">Edit</a>
-                                    <button type="button" class="edit-book-button" onclick="document.getElementById('edit-@book.Id').click()"><i class="fa fa-pencil" aria-hidden="true"></i></button>
-                                    <a hidden="hidden" id="remove-@book.Id" type="button" class="delete-book-button-link" asp-controller="Book" asp-action="DeleteBook" asp-route-id="@book.Id">Delete</a>
-                                    <button type="button" class="delete-book-button" onclick="document.getElementById('remove-@book.Id').click()"><i class="fa-solid fa-trash"></i></button>
-                                }
-                                else
-                                {
-                                    <a hidden="hidden" id="tofavorites-@book.Id" type="button" class="add-book-to-favorites-button-link" asp-controller="Book" asp-action="AddBookToFavorites" asp-route-bookId="@book.Id">Add To Favorites</a>
-                                    <button type="button" class="add-book-to-favorites-button" onclick="document.getElementById('tofavorites-@book.Id').click()"><i class="fa fa-heart" aria-hidden="true"></i></button>
-                                    <a hidden="hidden" id="add-book-to-cart-@book.Id" type="button" class="add-book-to-cart-button-link" asp-controller="Book" asp-action="AddBookToCart" asp-route-bookId="@book.Id">Add To Cart</a>
-                                    <button type="button" class="add-book-to-cart-button" onclick="document.getElementById('add-book-to-cart-@book.Id').click()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
-                                }
-                                <a hidden="hidden" id="view-book-@book.Id" type="button" class="view-book-button-link" asp-controller="Book" asp-action="ViewBook" asp-route-bookId="@book.Id">Details</a>
+                                    @if (User.IsInRole("Administrator"))
+                                    {
+                                        <a hidden="hidden" id="edit-@book.Id" type="button" class="edit-book-button-link" asp-controller="Book" asp-action="EditBook" asp-route-bookId="@book.Id">Edit</a>
+                                        <button type="button" class="edit-book-button" onclick="document.getElementById('edit-@book.Id').click()"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+                                        <a hidden="hidden" id="remove-@book.Id" type="button" class="delete-book-button-link" asp-controller="Book" asp-action="DeleteBook" asp-route-id="@book.Id">Delete</a>
+                                        <button type="button" class="delete-book-button" data-bs-toggle="modal" data-bs-target="#delete-book-modal"><i class="fa-solid fa-trash"></i></button>
+
+                                        <!-- Modal -->
+                                        <div class="modal fade" id="delete-book-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Are you sure you want to delete this book?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                                                        <button type="button" class="btn btn-danger" onclick="document.getElementById('remove-@book.Id').click()" data-bs-dismiss="modal">Yes</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <a hidden="hidden" id="tofavorites-@book.Id" type="button" class="add-book-to-favorites-button-link" asp-controller="Book" asp-action="AddBookToFavorites" asp-route-bookId="@book.Id">Add To Favorites</a>
+                                        <button type="button" class="add-book-to-favorites-button" onclick="document.getElementById('tofavorites-@book.Id').click()"><i class="fa fa-heart" aria-hidden="true"></i></button>
+                                        <a hidden="hidden" id="add-book-to-cart-@book.Id" type="button" class="add-book-to-cart-button-link" asp-controller="Book" asp-action="AddBookToCart" asp-route-bookId="@book.Id">Add To Cart</a>
+                                        <button type="button" class="add-book-to-cart-button" onclick="document.getElementById('add-book-to-cart-@book.Id').click()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
+                                    }
+                                    <a hidden="hidden" id="view-book-@book.Id" type="button" class="view-book-button-link" asp-controller="Book" asp-action="ViewBook" asp-route-bookId="@book.Id">Details</a>
                                     <button type="button" class="view-book-button" onclick="document.getElementById('view-book-@book.Id').click()"><i class="fa fa-info-circle" aria-hidden="true"></i></button>
                                 </div>
                             </div>
                         </div>
                     }
-                }
-            </div>
+                </div>
+            }
         </div>
     </div>
 </div>
