add rating to book summary; add possibility for an admin to add author to the db

--- a/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                                         {*@
                                     <a style="color:grey !important;" class="border-top-left-right" asp-controller="Book" asp-action="NewBook">Add Book</a>
                                     @*<a asp-controller="Book" asp-action="NewBook">Add Genre</a>*@
-                                    <a style="color:grey !important;" class="border-bottom-left-right" asp-controller="Book" asp-action="NewBook">Add Author</a>
+                                    <a style="color:grey !important;" class="border-bottom-left-right" asp-controller="Author" asp-action="NewAuthor">Add Author</a>
                                     @* }
                                         else*@
                                     @*{*@
