--- a/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
@@ -56,6 +56,7 @@
                             <div class="book-short-info">
                                 <div>
                                     <div class="book-title">@book.Title</div>
+                                    <div class="book-rating">Rating: @book.Rating / 5</div>
                                     <div class="book-author">@string.Join(", ", book.Authors.Select(a => $"{a.FirstName} {a.LastName}"))</div>
                                     <div class="book-price">$@book.Price</div>
                                 </div>
