add full info about a book
left to do:
- add cover photo to the info
- fix UI for full info of a book

--- a/Web/OnlineBookshop.Web/Views/Book/ViewBook.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Book/ViewBook.cshtml
@@ -5,27 +5,18 @@
 }
 
 <form method="post" enctype="multipart/form-data">
-    @* <div class="form-field pointer">
-        <label for="cover-file" class="pointer">
-        <div>Add cover</div>
-        <img src="~/images/gallery.png" alt="click here to upload book cover" class="upload-cover-icon">
-        </label>
-        <img id="cover-img" src="@Model.InputModel.CoverName" class="cover-preview"></img>
-        <input id="cover-file" type="file" name="cover" accept=".jpg,.jpeg,.png" onchange="oncoveruploaded()" hidden>
-        <div id="successfully-uploaded-message"></div>
-        <div id="upload-error" hidden>Wrong file type. Please select a .jpg, .jpeg or .png file.</div>
-        </div>*@
     <div class="form-field">
         <label for="title">@Model.Title</label>
     </div>
     <div class="form-field">
-        <label for="author">Author</label>
+        <img src="@Model.CoverUrl" alt="cover">
+    </div>
+    <div class="form-field">
         <label>Authors:</label>
         @foreach (var author in Model.Authors)
         {
             <label>@author.FirstName @author.LastName</label>
         }
-        </select>
     </div>
     <div class="form-field">
         <label for="publisher">Publisher: @Model.Publisher</label>
@@ -52,10 +43,6 @@
         <label for="price">Price: @Model.Price</label>
     </div>
     <div class="form-field">
-        <label for="language">Language:</label>
-        @foreach (var language in Model.Languages)
-        {
-            <label>@language.Name</label>
-        }
+        <label for="language">Language: @Model.Language.Name</label>
     </div>
 </form>
