--- a/Web/OnlineBookshop.Web/Views/Catalog/GetBookshelfCatalog.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/GetBookshelfCatalog.cshtml
@@ -55,7 +55,7 @@
                                 <div class="book-title">@book.Title</div>
                                 <div class="book-author">@string.Join(", ", book.Authors.Select(a => $"{a.FirstName} {a.LastName}"))</div>
                                 <div class="book-price">$@book.Price</div>
-                                <a hidden="hidden" id="read-@book.Id" type="button" class="read-book-button-link" asp-controller="Book" asp-action="ReadBook" asp-route-bookId="@book.Id">Read</a>
+                                <a hidden="hidden" id="read-@book.Id" type="button" class="read-book-button-link" asp-controller="Reader" asp-action="Book" asp-route-bookId="@book.Id" asp-route-page="1">Read</a>
                                 <button type="button" class="read-book-button" onclick="document.getElementById('read-@book.Id').click()"><i class="fa fa-book" aria-hidden="true"></i></button>
                                 <a hidden="hidden" id="rate-@book.Id" type="button" class="rate-book-button-link" asp-controller="Book" asp-action="RateBook" asp-route-bookId="@book.Id">Rate</a>
                                 <button type="button" class="rate-book-button" onclick="document.getElementById('rate-@book.Id').click()"><i class="fa fa-star-half-o" aria-hidden="true"></i></button>
