add reports to table

--- a/Web/OnlineBookshop.Web/wwwroot/css/catalog.css
+++ b/Web/OnlineBookshop.Web/wwwroot/css/catalog.css
@@ -235,7 +235,7 @@ body {
 /* Style edit button */
 .edit-book-button, .delete-book-button, .add-book-to-favorites-button,
 .remove-book-from-favorites-button, .add-book-to-cart-button, .remove-from-cart,
-.buy-books-in-cart, .read-book-button, .rate-book-button, .view-book-button {
+.buy-books-in-cart, .read-book-button, .rate-book-button, .view-book-button, .report-book-button {
     border: none; /* Remove borders */
     color: white; /* White text */
     padding: 10px 14px; /* Some padding */
@@ -244,7 +244,8 @@ body {
     border-radius: 8px; /* Make edges round */
 }
 
-.delete-book-button, .remove-book-from-favorites-button, .remove-from-cart {
+.delete-book-button, .remove-book-from-favorites-button, .remove-from-cart,
+.report-book-button {
     background-color: darkred;
 }
 
@@ -265,7 +266,8 @@ body {
     background-color: RoyalBlue;
 }
 
-.delete-book-button:hover, .remove-book-from-favorites-button:hover, .remove-from-cart:hover {
+.delete-book-button:hover, .remove-book-from-favorites-button:hover, .remove-from-cart:hover,
+.report-book-button:hover {
     background-color: orangered
 }
 
