--- a/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
@@ -93,6 +93,10 @@
                                         <button type="button" class="add-book-to-favorites-button" onclick="document.getElementById('tofavorites-@book.Id').click()"><i class="fa fa-heart" aria-hidden="true"></i></button>
                                         <a hidden="hidden" id="add-book-to-cart-@book.Id" type="button" class="add-book-to-cart-button-link" asp-controller="Book" asp-action="AddBookToCart" asp-route-bookId="@book.Id">Add To Cart</a>
                                         <button type="button" class="add-book-to-cart-button" onclick="document.getElementById('add-book-to-cart-@book.Id').click()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
+                                        <a hidden="hidden" id="report-book-@book.Id" type="button" class="report-book-button-link" asp-controller="Book" asp-action="ReportBook" asp-route-bookId="@book.Id">Report</a>
+                                        <button type="button" class="report-book-button" onclick="document.getElementById('report-book-@book.Id').click()">
+                                            <i class="fa fa-flag" aria-hidden="true"></i>
+                                        </button>
                                     }
                                     <a hidden="hidden" id="view-book-@book.Id" type="button" class="view-book-button-link" asp-controller="Book" asp-action="ViewBook" asp-route-bookId="@book.Id">Details</a>
                                     <button type="button" class="view-book-button" onclick="document.getElementById('view-book-@book.Id').click()"><i class="fa fa-info-circle" aria-hidden="true"></i></button>
