--- a/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
@@ -1,7 +1,38 @@
 ﻿@model OnlineBookshop.Web.ViewModels.ViewModels.BookForCategoriesViewModel;
 @using OnlineBookshop.Common;
+@using System.Text
 @{
     this.ViewData["Title"] = "ViewBook";
+
+    string GetStars(double rating)
+    {
+        int fullStars = (int)(rating / 1);
+        var hasHalfStar = rating % 1 > 0;
+        var hollowStars = 5 - fullStars;
+        if (hasHalfStar)
+        {
+            hollowStars--;
+        }
+
+        var sb = new StringBuilder();
+
+        for (int i = 0; i < fullStars; i++)
+        {
+            sb.Append("<i class=\"fa-solid fa-star\" style=\"color: gold;\"></i>");
+        }
+
+        if (hasHalfStar)
+        {
+            sb.Append("<i class=\"fa-regular fa-star-half-stroke\" style=\"color: gold;\"></i>");
+        }
+
+        for (int i = 0; i < hollowStars; i++)
+        {
+            sb.Append("<i class=\"fa-regular fa-star\" style=\"color: gold;\"></i>");
+        }
+
+        return sb.ToString();
+    }
 }
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -56,7 +87,7 @@
                             <div class="book-short-info">
                                 <div>
                                     <div class="book-title">@book.Title</div>
-                                    <div class="book-rating">Rating: @book.Rating / 5</div>
+                                    <div class="book-rating">Rating: @Html.Raw(GetStars(book.Rating))</div>
                                     <div class="book-author">@string.Join(", ", book.Authors.Select(a => $"{a.FirstName} {a.LastName}"))</div>
                                     <div class="book-price">$@book.Price</div>
                                 </div>
