--- a/Web/OnlineBookshop.Web/wwwroot/css/catalog.css
+++ b/Web/OnlineBookshop.Web/wwwroot/css/catalog.css
@@ -190,7 +190,6 @@ body {
     align-items: flex-start;
     border: 1px solid #ccc;
     border-radius: 1.5em;
-    cursor: pointer;
     width: 415px;
     margin: 0 1em 2em;
     height: 310px;
@@ -250,7 +249,7 @@ body {
 }
 
 .edit-book-button, .add-book-to-cart-button, .read-book-button {
-    background-color: darkblue;
+    background-color: #14213d;
 }
 
 .add-book-to-favorites-button, .view-book-button {
